# eora-test

./: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  telegram_bot.py
ai/: __init__.py  ai_client.py  context_builder.py  search_engine.py  vector_manager.py
ai_client/: ai_client.py
parser/: __init__.py  embedding_manager.py  parser.py  text_processor.py  vector_builder.py  web_scrapper.py
